test/loop/confidence/errors/assign_errors_2.loop
# Assign to vars

@assign(value) ->
  value = [value, 2, 3]
  value

main ->
  @assign(1)
